# scrutiny-demos

./: .codebanner.json  README.md  sdk_demo.py
arduino_mega_2560/: README.md
atmega_2560_cmake/: CMakeLists.txt  README.md  scrutiny_server_config.json  sdk_demo.py
atmega_2560_cmake/aliases/: alias1.json
atmega_2560_cmake/cmake/toolchain/: avr.toolchain.cmake
atmega_2560_cmake/scripts/: build_in_docker.sh  common.sh  flash.sh
atmega_2560_cmake/src/: bno055.cpp  scrutiny_integration.cpp
aurix-tc334/: .codebanner.json  CMakeLists.txt  README.md  dashboard.scdb
aurix-tc334/aliases/: wavegen_alias.json
aurix-tc334/bsp/: CMakeLists.txt
aurix-tc334/bsp/Configurations/: Ifx_Cfg_Ssw.c
aurix-tc334/bsp/Libraries/Infra/Sfr/TC33x/: IfxCbs_bf.h  IfxCcu6_reg.h  IfxCcu6_regdef.h  IfxCpu_bf.h  IfxCpu_regdef.h  IfxDom_bf.h  IfxDom_reg.h  IfxEvadc_bf.h  IfxEvadc_reg.h  IfxFce_bf.h  IfxGpt12_reg.h  IfxGtm_bf.h  IfxInt_bf.h  IfxInt_reg.h  IfxIom_bf.h  IfxPfi_reg.h  IfxQspi_bf.h  IfxQspi_reg.h  IfxQspi_regdef.h  IfxSbcu_bf.h  IfxSbcu_reg.h  IfxScu_bf.h  IfxScu_reg.h  IfxScu_regdef.h  IfxSent_reg.h  IfxSmu_bf.h  Ifx_reg.h
aurix-tc334/bsp/Libraries/iLLD/TC3xx/Tricore/_PinMap/TC33x/: IfxAsclin_PinMap_TC33x_TQFP144.c  IfxCan_PinMap_TC33x_LFBGA180.h  IfxCan_PinMap_TC33x_LFBGA292.h  IfxCan_PinMap_TC33x_TQFP100.h  IfxCan_PinMap_TC33x_TQFP80.h  IfxCcu6_PinMap_TC33x_TQFP100.h  IfxCcu6_PinMap_TC33x_TQFP80.h  IfxDmu_PinMap_TC33x_LFBGA180.h  IfxDmu_PinMap_TC33x_LFBGA292.c  IfxDmu_PinMap_TC33x_LFBGA292.h  IfxDmu_PinMap_TC33x_TQFP144.c  IfxDmu_PinMap_TC33x_TQFP144.h  IfxEray_PinMap_TC33x_LFBGA292.c  IfxEray_PinMap_TC33x_LFBGA292.h  IfxEray_PinMap_TC33x_TQFP100.c  IfxEvadc_PinMap_TC33x_516.c  IfxGpt12_PinMap_TC33x_LFBGA180.c  IfxGpt12_PinMap_TC33x_LFBGA292.c  IfxGpt12_PinMap_TC33x_LFBGA292.h  IfxGpt12_PinMap_TC33x_TQFP100.c  IfxGtm_PinMap_TC33x_LFBGA180.h  IfxGtm_PinMap_TC33x_LFBGA292.c  IfxGtm_PinMap_TC33x_TQFP100.c  IfxGtm_PinMap_TC33x_TQFP144.c  IfxPms_PinMap_TC33x_516.h  IfxPms_PinMap_TC33x_LFBGA180.h  IfxPort_PinMap_TC33x_516.h  IfxPort_PinMap_TC33x_LFBGA180.c  IfxQspi_PinMap_TC33x_LFBGA292.c  IfxQspi_PinMap_TC33x_TQFP144.h  IfxScu_PinMap_TC33x_LFBGA180.c  IfxScu_PinMap_TC33x_TQFP100.c  IfxScu_PinMap_TC33x_TQFP80.h  IfxSent_PinMap_TC33x_LFBGA292.c  IfxSent_PinMap_TC33x_TQFP144.c  IfxSmu_PinMap_TC33x_516.c  IfxSmu_PinMap_TC33x_TQFP144.c  IfxSmu_PinMap_TC33x_TQFP80.c  IfxSmu_PinMap_TC33x_TQFP80.h
aurix-tc334/include/: UART_VCOM.hpp
aurix-tc334/scripts/: build.sh  flash.sh
aurix-tc334/src/: UART_VCOM.cpp  board.cpp  board.hpp  ignored_file.cpp  main.c  main.cpp  scrutiny_integration.cpp  scrutiny_integration.hpp  task_controller.cpp  task_controller.hpp  wave_function_generator.cpp  wave_function_generator.hpp
aurix-tc334/toolchain/: tricore-gcc.cmake
aurix_tc334_cmake/: .codebanner.json  CMakeLists.txt  README.md
aurix_tc334_cmake/aliases/: io.json  tasks.json  wavegen_alias.json
aurix_tc334_cmake/bsp/Configurations/: Ifx_Cfg.h  Ifx_Cfg_Ssw.h
aurix_tc334_cmake/gui_dashboards/: rpv_demo.scdb  wave_generator_demo.scdb
aurix_tc334_cmake/prebuilt/: scrutiny-aurix-tc334-tagged.elf  scrutiny-aurix-tc334.sfd
aurix_tc334_cmake/scripts/: build.sh  flash.sh
aurix_tc334_cmake/src/: board.cpp  board.hpp  ignored_file.cpp  main.cpp  scrutiny_integration.cpp  scrutiny_integration.hpp  task_controller.hpp  wave_function_generator.cpp  wave_function_generator.hpp
aurix_tc334_cmake/toolchain/: Lcf_Gnuc_Tricore_Tc.lsl  tricore-gcc.cmake
nsec2024/: .codebanner.json  CMakeLists.txt  Dockerfile  LICENSE  README.md  arduino_mega_2560  scrutiny_server_config.json
nsec2024/aliases/: alias1.json
nsec2024/cmake/: arduino_core.cmake
nsec2024/cmake/toolchain/: avr.toolchain.cmake
nsec2024/prebuilt/: scrutiny-nsec2024.elf  scrutiny-nsec2024.sfd
nsec2024/scripts/: build.sh  install_sfd.sh  set_debug_port.sh
nsec2024/src/: bno055.cpp  bno055.hpp  main.cpp  scrutiny_integration.cpp  scrutiny_integration.hpp
nsec2024/src/twi/: twi.c  twi.h
ti_c28x_launchxl_f280049c/: README.md
(+190 files in other folders)
